<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="logo">Logo</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="representative_picture">Representative Picture</string>
    <string name="representative_website">Representative Website</string>
    <string name="representative_facebook">Representative Facebook</string>
    <string name="representative_twitter">Representative Twitter</string>
    <string name="elections">Upcoming Elections</string>
    <string name="state_ballot"><![CDATA[Ballot Information >]]></string>
    <string name="state_locations"><![CDATA[Voting Locations >]]></string>
    <string name="address">Address</string>
    <string name="links">Election Information</string>
    <string name="not_available">Not available</string>
    <string name="voting_information_page_not_available">Voting information page not available</string>
    <string name="ballot_information_page_not_available">Ballot information page not available</string>
    <string name="could_not_find_location">Location services could not find your position</string>
    <string name="location_services_required">Location services are required for this action</string>
    <string name="pls_enable_location_permissions">Enable Location permissions from your phone settings</string>
    <string name="followed_elections">Followed Elections</string>
    <string name="retry">Could not retrieve data, retry later</string>
    <string name="use_my_location">Use my location</string>
    <string name="address_line_1">Address line 1</string>
    <string name="address_line_2">Address line 2</string>
    <string name="city">City</string>
    <string name="zip_code">Zip code</string>
    <string name="representatives">Representatives</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="loading">Loading</string>


</resources>
