<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding">

        <ImageView
            android:id="@+id/repr_propic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ballot_logo"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:layout_margin="@dimen/default_padding"
            android:contentDescription="@string/representative_picture"
            app:profileImage="@{representative.official.photoUrl}"
        />

        <TextView
            android:id="@+id/repr_name"
            app:layout_constraintEnd_toStartOf="@id/repr_icon_website"
            app:layout_constraintStart_toEndOf="@id/repr_propic"
            app:layout_constraintTop_toBottomOf="@id/repr_office"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_padding"
            android:text="@{representative.official.name}"
            tools:text="Representative name"
        />

        <TextView
            android:id="@+id/repr_party"
            app:layout_constraintEnd_toStartOf="@id/repr_icon_website"
            app:layout_constraintStart_toEndOf="@id/repr_propic"
            app:layout_constraintTop_toBottomOf="@id/repr_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_padding"
            android:text="@{representative.official.party}"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="Representative party"
        />

        <TextView
            android:id="@+id/repr_office"
            app:layout_constraintEnd_toStartOf="@+id/repr_icon_website"
            app:layout_constraintStart_toEndOf="@id/repr_propic"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_padding"
            android:text="@{representative.office.name}"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            tools:text="Representative office"
        />

        <ImageView
            android:id="@+id/repr_icon_website"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/repr_icon_facebook"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="@dimen/default_padding"
            android:contentDescription="@string/representative_website"
            app:srcCompat="@drawable/ic_www"
        />

        <ImageView
            android:id="@+id/repr_icon_facebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/repr_icon_twitter"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="@dimen/default_padding"
            android:contentDescription="@string/representative_facebook"
            app:srcCompat="@drawable/ic_facebook"
        />

        <ImageView
            android:id="@+id/repr_icon_twitter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginEnd="@dimen/default_padding"
            android:contentDescription="@string/representative_twitter"
            app:srcCompat="@drawable/ic_twitter"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>